[tool.poetry]
name = "omada-api"
version = "4.1.5"
description = "A simple Python wrapper for the TP-Link Omada Software Controller API"
authors = ["Gregory Haberek <ghaberek@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.22.0"
future-fstrings = "^1.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
