[tool.poetry]
name = "omada-api"
version = "4.1.5"
description = "A simple Python wrapper for the TP-Link Omada Software Controller API"
authors = [
    "Gregory Haberek <ghaberek@gmail.com>",
    "sreggy <sregaglia@gmail.com>",
    "Gilles Depeyrot <g.depeyrot@transacom.fr>",
    "Michael McCallister <mike@mccllstr.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.22.0"
future-fstrings = "^1.2.0"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
